--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="pageHeader">
         <section class="headerContainer">
-            <img class="header-image" src="./images/logo.png" alt="">
+            <img class="header-image" src="/images/logo.PNG" alt="">
 
             <ul class="header-list">
                 <li class="listItem">
@@ -67,7 +67,7 @@
     <h1 id="coin" class="text-head">Introducing PiedPiperCoin </h1>
     
     <p class="column top">
-        <img class="logo" src="/images/PPC Logo.png" align="left" alt="">
+        <img class="logo" src="/images/PPC Logo.PNG" align="left" alt="">
         Pied Piper's new internet is built for users, by users.
 You supply the storage, compute, and networking resources that power our entire decentralized web.
     </p>
@@ -86,32 +86,32 @@ The more you share your device resources, the more PiedPiperCoin you receive.
 <h1 id="team" class="text-head">The team </h1>
 <section class="text-container-team" >
     <div class="card" >
-        <img src="/images/card1.png" height="168px"; width="168px";  alt="">
+        <img src="/images/card1.PNG" height="168px"; width="168px";  alt="">
         <h2> Richard Hendricks</h2>
         <h3> Founder & CEO</h3>
          </div>
          <div class="card" >
-            <img src="/images/card2.png" height="168px"; width="168px";alt="">
+            <img src="/images/card2.PNG" height="168px"; width="168px";alt="">
             <h2> Dinesh Chugtai</h2>
             <h3> Senior Programmer</h3>
              </div>
              <div class="card" >
-                <img src="/images/card3.png" height="168px"; width="168px"; alt="">
+                <img src="/images/card3.PNG" height="168px"; width="168px"; alt="">
                 <h2> Bertram Gilfoyle</h2>
                 <h3> Chief Systems Architect</h3>
                  </div>
                  <div class="card" >
-                    <img src="/images/card4.png" height="168px"; width="168px"; alt="">
+                    <img src="/images/card4.PNG" height="168px"; width="168px"; alt="">
                     <h2> Jared Dunn</h2>
                     <h3> Chief Operating Officer</h3>
                      </div>      
                      <div class="card" >
-                        <img src="/images/card5.png" height="168px"; width="168px"; alt="">
+                        <img src="/images/card5.PNG" height="168px"; width="168px"; alt="">
                         <h2> Monica Hall</h2>
                         <h3> Chief Financial Officer</h3>
                          </div>  
                          <div class="card" >
-                            <img src="/images/card6.png" height="168px"; width="168px"; alt="">
+                            <img src="/images/card6.PNG" height="168px"; width="168px"; alt="">
                             <h2> Nelson Bighetti</h2>
                             <h3> Majority Investor</h3>
                              </div> 
