--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="pageHeader">
         <section class="headerContainer">
-            <img class="header-image" src="/images/logo.PNG" alt="">
+            <img class="header-image" src="images/logo.PNG" alt="">
 
             <ul class="header-list">
                 <li class="listItem">
